db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/openstream-default: "true"
        io.kompose.service: db
    spec:
      imagePullSecrets:
        - name: regcred # Reference to the Docker registry secret
      containers:
        - args:
            - --replSet
            - rs0
            - --bind_ip_all
          image: mongo:latest # Ensure this image exists in your registry
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - echo "try { rs.status() } catch (err) { rs.initiate() }" | mongosh --port ${DB_PORT} --quiet
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 30
          name: app-db
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: db-data
            - mountPath: /data/configdb
              name: db-config
      restartPolicy: Always
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
        - name: db-config
          persistentVolumeClaim:
            claimName: db-config
status: {}
