mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo-express
  name: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo-express
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/openstream-default: "true"
        io.kompose.service: mongo-express
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_URL
                  name: env-development
            - name: DB_PORT
              valueFrom:
                configMapKeyRef:
                  key: DB_PORT
                  name: env-development
            - name: ME_CONFIG_BASICAUTH
              valueFrom:
                configMapKeyRef:
                  key: ME_CONFIG_BASICAUTH
                  name: env-development
            - name: ME_CONFIG_MONGODB_ADMINPASSWORD
              valueFrom:
                configMapKeyRef:
                  key: ME_CONFIG_MONGODB_ADMINPASSWORD
                  name: env-development
            - name: ME_CONFIG_MONGODB_ADMINUSERNAME
              valueFrom:
                configMapKeyRef:
                  key: ME_CONFIG_MONGODB_ADMINUSERNAME
                  name: env-development
            - name: ME_CONFIG_MONGODB_REPLICA_SET
              valueFrom:
                configMapKeyRef:
                  key: ME_CONFIG_MONGODB_REPLICA_SET
                  name: env-development
            - name: ME_CONFIG_MONGODB_URL
              valueFrom:
                configMapKeyRef:
                  key: ME_CONFIG_MONGODB_URL
                  name: env-development
            - name: MONGO_DB
              valueFrom:
                configMapKeyRef:
                  key: MONGO_DB
                  name: env-development
            - name: MONGO_EXPRESS_PORT
              valueFrom:
                configMapKeyRef:
                  key: MONGO_EXPRESS_PORT
                  name: env-development
            - name: MONGO_HOST
              valueFrom:
                configMapKeyRef:
                  key: MONGO_HOST
                  name: env-development
            - name: MONGO_INITDB_ROOT_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: MONGO_INITDB_ROOT_PASSWORD
                  name: env-development
            - name: MONGO_INITDB_ROOT_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: MONGO_INITDB_ROOT_USERNAME
                  name: env-development
            - name: NODE_ENV
              valueFrom:
                configMapKeyRef:
                  key: NODE_ENV
                  name: env-development
            - name: SERVER_PORT
              valueFrom:
                configMapKeyRef:
                  key: SERVER_PORT
                  name: env-development
            - name: SOCKET_PORT
              valueFrom:
                configMapKeyRef:
                  key: SOCKET_PORT
                  name: env-development
          image: mongo-express
          name: mongo-express
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
