server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/openstream-default: "true"
        io.kompose.service: server
    spec:
      containers:
        - args:
            - sh
            - -c
            - "\n  npm run prisma:generate && \n  npm run db:push &&\n  npm run dev\n"
          image: joey415/openstream-server
          name: server
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /app
              name: server-claim0
            - mountPath: /app/node_modules
              name: server-claim1
      restartPolicy: Always
      volumes:
        - name: server-claim0
          persistentVolumeClaim:
            claimName: server-claim0
        - name: server-claim1
          persistentVolumeClaim:
            claimName: server-claim1
status: {}
