websocket-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: openstream-websocket
  name: openstream-websocket
spec:
  ports:
    - name: "3005"
      port: 3005
      targetPort: 3005
  selector:
    io.kompose.service: openstream-websocket
status:
  loadBalancer: {}
